// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format-before-test args is called with the right arguments 1`] = `
Array [
  Array [
    "Hello",
    1,
    Object {
      "a": 1,
    },
  ],
  "WARN",
  "test-context",
  "[93m",
  "[39m",
]
`;

exports[`format-before-test functionality allows replacing the prefix 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [
    Array [
      "Overridden",
      "INFO",
      "test-context",
    ],
  ],
  "WARN" => Array [],
  "ERROR" => Array [],
}
`;

exports[`format-before-test transports can provide additional/replacement formatters allows replacing the prefix 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [
    Array [
      "Howdy",
      "INFO",
      "test-context",
    ],
  ],
  "WARN" => Array [],
  "ERROR" => Array [],
}
`;
